configs/jellyfin/jellyfin-deployment.yaml
# jellyfin-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: servarr

spec:
  replicas: 1

  selector:
    matchLabels:
      app: jellyfin

  template:
    metadata:
      labels:
        app: jellyfin

    spec:
      # Run container with non-root user
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest

          ports:
            - containerPort: 8096
              name: web

          volumeMounts:
            - name: config
              mountPath: /config
              subPath: jellyfin

            - name: media
              mountPath: /media

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: servarr-config-pvc

        - name: media
          persistentVolumeClaim:
            claimName: servarr-nfs-pvc
