configs/jellyfin/jellyfin-ingressroute.yaml
# jellyfin-ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: servarr

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`jellyfin.example.com`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096

  tls:
    secretName: jellyfin-tls
